; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_CnReleaseSocket.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Client.c_CnReleaseSocket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"pid\00", align 1
@cn_listener_lock = common dso_local global i32 0, align 4
@cn_listener = common dso_local global %struct.TYPE_3__* null, align 8
@cn_next_allow = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CnReleaseSocket(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  store i64 0, i64* %5, align 8
  store i64 0, i64* %6, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %9, %2
  br label %39

13:                                               ; preds = %9
  %14 = load i32*, i32** %4, align 8
  %15 = call i64 @PackGetInt(i32* %14, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  store i64 %15, i64* %5, align 8
  %16 = load i64, i64* %6, align 8
  %17 = load i64, i64* %5, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %13
  br label %39

20:                                               ; preds = %13
  %21 = load i32, i32* @cn_listener_lock, align 4
  %22 = call i32 @Lock(i32 %21)
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** @cn_listener, align 8
  %24 = icmp ne %struct.TYPE_3__* %23, null
  br i1 %24, label %25, label %36

25:                                               ; preds = %20
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** @cn_listener, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = icmp eq i32 %28, 0
  br i1 %29, label %30, label %35

30:                                               ; preds = %25
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** @cn_listener, align 8
  %32 = call i32 @StopListener(%struct.TYPE_3__* %31)
  %33 = call i64 (...) @Tick64()
  %34 = add nsw i64 %33, 6000
  store i64 %34, i64* @cn_next_allow, align 8
  br label %35

35:                                               ; preds = %30, %25
  br label %36

36:                                               ; preds = %35, %20
  %37 = load i32, i32* @cn_listener_lock, align 4
  %38 = call i32 @Unlock(i32 %37)
  br label %39

39:                                               ; preds = %36, %19, %12
  ret void
}

declare dso_local i64 @PackGetInt(i32*, i8*) #1

declare dso_local i32 @Lock(i32) #1

declare dso_local i32 @StopListener(%struct.TYPE_3__*) #1

declare dso_local i64 @Tick64(...) #1

declare dso_local i32 @Unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
